[Task] Fix alignment between products and header

--- a/src/components/store.css
+++ b/src/components/store.css
@@ -28,6 +28,6 @@
   max-width: 70vw;
   max-height: 70vh;
   position: relative;
-  top: 10vh;
-  left: 10vw
+  top: 1vh;
+  left: 17vw
 }
